new download function for occurrences
